--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <footer>
         <a href="https://www.sistemafaep.org.br/agrinho/" class="cta-footer">Faça parte dessa causa!</a>
-        <p>2025 | @Pitt-xx</p>
+        <p>2025 | @Zaolingus</p>
     </footer>
 </body>
 </html>
